--- a/ColourCheck/MainWindow.xaml
+++ b/ColourCheck/MainWindow.xaml
@@ -5,8 +5,91 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColourCheck"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MainWindow" Height="660.213" Width="785.136"
+        ResizeMode="CanResizeWithGrip"
+        BorderThickness="0"
+        AllowsTransparency="True"
+        Background="#FF5D7074"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="None"
+        WindowState="Maximized"
+        Topmost="True"
+        Loaded="Window_Loaded">
+    <Grid Margin="0,0,-2.667,-0.333" Background="#FF012060">
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200*"></ColumnDefinition>
+            <ColumnDefinition Width="200*"></ColumnDefinition>
+            <ColumnDefinition Width="200*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30*"></RowDefinition>
+            <RowDefinition Height="50*"></RowDefinition>
+            <RowDefinition Height="200*"></RowDefinition>
+            <RowDefinition Height="200*"></RowDefinition>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Label Content="VERSION:"
+               x:Name="lblVersion" 
+               VerticalContentAlignment="Center"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Right"
+               HorizontalContentAlignment="Left"
+               Grid.Row="0"
+               FontSize="10"               
+               Foreground="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" Height="40" RenderTransformOrigin="0.468,0.517" Grid.Column="3" Margin="0,-5,0,42.333" Grid.RowSpan="2" Width="91"/>
+
+        <Label Content="SELECCIONA EL COLOR DE LA UNIDAD:"
+               x:Name="lblTitle2" 
+               VerticalContentAlignment="Center"
+               HorizontalContentAlignment="Center"
+               Grid.ColumnSpan="4"
+               Grid.Row="1"
+               FontSize="23"               
+               Foreground="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" Height="40" RenderTransformOrigin="0.468,0.517"/>
+
+        <MediaElement  x:Name="MediaElement_Colour1" 
+            Stretch="Fill" LoadedBehavior="Manual"                  
+            Grid.Row="2"
+            Margin="10"  
+            MouseLeftButtonDown="MediaElement_Colour1_MouseLeftButtonDown"/>
+
+        <MediaElement  x:Name="MediaElement_Colour2" 
+            Stretch="Fill" LoadedBehavior="Manual"                  
+            Grid.Row="2"
+            Grid.Column="1"
+            Margin="10"  
+            MouseLeftButtonDown="MediaElement_Colour2_MouseLeftButtonDown"/>
+
+        <MediaElement  x:Name="MediaElement_Colour3" 
+            Stretch="Fill" LoadedBehavior="Manual"                  
+            Grid.Row="2"
+            Grid.Column="3"
+            Margin="10" 
+            MouseLeftButtonDown="MediaElement_Colour3_MouseLeftButtonDown"/>
+
+        <MediaElement  x:Name="MediaElement_Colour4" 
+            Stretch="Fill" LoadedBehavior="Manual"                  
+            Grid.Row="3"
+            Grid.Column="0"
+            Margin="10" 
+            MouseLeftButtonDown="MediaElement_Colour4_MouseLeftButtonDown"/>
+
+        <MediaElement  x:Name="MediaElement_Colour5" 
+            Stretch="Fill" LoadedBehavior="Manual"                  
+            Grid.Row="3"
+            Grid.Column="1"
+            Margin="10"  
+            MouseLeftButtonDown="MediaElement_Colour5_MouseLeftButtonDown"/>
+
+        <MediaElement  x:Name="MediaElement_Colour6" 
+            Stretch="Fill" LoadedBehavior="Manual"                  
+            Grid.Row="3"
+            Grid.Column="2"
+            Margin="10"  
+            MouseLeftButtonDown="MediaElement_Colour6_MouseLeftButtonDown"/>
+
+
     </Grid>
 </Window>
